--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,30 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="WEB-INF/src"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/struts-core-1.3.10.jar"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/lib/servlet-api.jar"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/lib/jasper.jar"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/lib/jsp-api.jar"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/lib/el-api.jar"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/catalina-storeconfig.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/ecj-4.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-jni.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-util-scan.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/tomcat-websocket.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/websocket-api.jar"/>
+	<classpathentry kind="lib" path="C:/pleiades/tomcat/8/lib/mysql-connector-java-5.1.44-bin.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
